fix: change overflow wrap style

--- a/mobile/src/components/inputs/inputReadonly/inputReadonly.scss
+++ b/mobile/src/components/inputs/inputReadonly/inputReadonly.scss
@@ -9,7 +9,7 @@
 
 .input__value {
   margin-top: 0.5rem;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  white-space: normal;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
